# grammers-python

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: README.md  requirements.txt
docs/locale/zh-cn/LC_MESSAGES/basic/: next-steps.po  updates.po
docs/locale/zh-cn/LC_MESSAGES/concepts/: asyncio.po  full-api.po
docs/locale/zh-cn/LC_MESSAGES/modules/: client.po  custom.po  errors.po  sessions.po
docs/locale/zh/LC_MESSAGES/: index.po
docs/locale/zh/LC_MESSAGES/basic/: installation.po  quick-start.po  signing-in.po
docs/locale/zh/LC_MESSAGES/concepts/: botapi-vs-mtproto.po  sessions.po  strings.po  updates.po
docs/locale/zh/LC_MESSAGES/modules/: utils.po
docs/locale/zh/LC_MESSAGES/quick-references/: client-reference.po  events-reference.po
docs/locale/zh_CN/LC_MESSAGES/concepts/: asyncio.po  chats-vs-channels.po  errors.po  peers.po
docs/locale/zh_CN/LC_MESSAGES/modules/: events.po
docs/locale/zh_CN/LC_MESSAGES/quick-references/: objects-reference.po
docs/source/: conf.py  index.rst
docs/source/basic/: installation.rst  next-steps.rst  quick-start.rst  signing-in.rst  updates.rst
docs/source/concepts/: asyncio.rst  errors.rst  full-api.rst  peers.rst  sessions.rst  strings.rst  updates.rst
docs/source/modules/: client.rst  custom.rst  errors.rst  events.rst  sessions.rst  utils.rst
docs/source/quick-references/: client-reference.rst  events-reference.rst  objects-reference.rst
grammers-mtsender-pyo3/: Cargo.toml
grammers-mtsender-pyo3/src/: configuration.rs  errors.rs  lib.rs  sender.rs  sender_pool.rs
grammers-mtsender-pyo3/src/net/: mod.rs  tcp.rs
grammers-python/: Cargo.toml
grammers-python/src/: custom.rs  hints.rs  lib.rs  utils.rs
grammers-python/src/client/: auth.rs  chats.rs  client.rs  iter_buffer.rs  messages.rs  mod.rs  net.rs  updates.rs  utilities.rs
grammers-python/src/client/messages/: base.rs  history_message_iter.rs  messages.rs  mod.rs
grammers-python/src/crypto/: auth_key.rs  deque_buffer.rs  errors.rs  factorize.rs  mod.rs  sha.rs
grammers-python/src/errors/: common.rs  macros.rs  mod.rs  rpcbaseerrors.rs  rpcerrorlist.rs  signin.rs
grammers-python/src/media/: input_media.rs  mod.rs
grammers-python/src/message/: input_message.rs  message.rs  mod.rs
grammers-python/src/peer/: action.rs  channel.rs  chats.rs  dialog.rs  group.rs  mod.rs  participant.rs  peer.rs  peer_map.rs  permissions.rs  user.rs
grammers-python/src/update/: update.rs
grammers-session-pyo3/: Cargo.toml
grammers-session-pyo3/src/: dc_options.rs  lib.rs  peer.rs  session.rs  types.rs  utils.rs
grammers-session-pyo3/src/storages/: mod.rs  sqlite.rs
grammers-tl-gen-pyo3/: Cargo.toml
grammers-tl-gen-pyo3/src/: a.rs  common.rs  enums.rs  lib.rs  metadata.rs  rustifier.rs  structs.rs
grammers-tl-types-pyo3/: Cargo.toml  build.rs
grammers-tl-types-pyo3/src/: common.rs  deserialize.rs  generated.rs  lib.rs  serialize.rs  utils.rs
grammers-tl-types-pyo3/tests/: test_tlobject.rs
grammers-tl-types-pyo3/tl/: api.tl
python/grammers/: __init__.py  __init__.pyi  errors.py  functions.py  runner.py  types.py  utils.py
python/grammers/crypto/: __init__.py
python/grammers/sessions/: __init__.py  session.py  session.pyi  sqlite.py  types.py  types.pyi
python/grammers/tl/: __init__.py  functions.py  tlobject.py  tlobject.pyi  types.py
python/grammers/tl/types/: __init__.py
python/src/grammers/: __init__.py  __init__.pyi  errors.py  functions.py  hints.py  types.py  utils.py
python/src/grammers/_rs/: __init__.pyi
python/src/grammers/_rs/client/: __init__.pyi
python/src/grammers/_rs/crypto/: __init__.pyi
python/src/grammers/_rs/custom/: __init__.pyi
python/src/grammers/_rs/sessions/: types.pyi
python/src/grammers/_rs/tl/: __init__.pyi
python/src/grammers/client/: __init__.py  __init__.pyi  types.py  types.pyi
python/src/grammers/custom/: __init__.py
python/src/grammers/errors/: __init__.py  common.py  common.pyi  rpcbaseerrors.py  rpcbaseerrors.pyi  rpcerrorlist.py  rpcerrorlist.pyi
python/src/grammers/sessions/: __init__.py  dc_options.py  session.pyi  sqlite.py  types.py  types.pyi
python/src/grammers/tl/: __init__.py  allobjects.py  tlobject.py  tlobject.pyi
python/src/grammers/tl/functions/: __init__.py  __init__.pyi  account.pyi  auth.pyi  bots.pyi  channels.pyi  chatlists.pyi  contacts.pyi  folders.pyi  fragment.pyi  help.pyi  langpack.pyi  messages.pyi  payments.pyi  phone.pyi  photos.pyi  premium.pyi  smsjobs.pyi  stats.pyi  stickers.pyi  stories.pyi  updates.pyi  upload.pyi  users.pyi
python/src/grammers/tl/types/: __init__.py  __init__.pyi  account.pyi  auth.pyi  bots.pyi  channels.pyi  chatlists.pyi  contacts.pyi  fragment.pyi  help.pyi  messages.pyi  payments.pyi  phone.pyi  photos.pyi  premium.pyi  smsjobs.pyi  stats.pyi  stickers.pyi  storage.pyi  stories.pyi  updates.pyi  upload.pyi  users.pyi
python/tests/: test_ping.py  test_sqlite_session.py
python/tests/tl/: test_tlobject.py
scripts/: dev.sh  stub_gen.sh  test.sh
src/: lib.rs
src/client/: auth.rs  chats.rs  client.rs  messages.rs  mod.rs  net.rs  utilities.rs
src/crypto/: auth_key.rs  deque_buffer.rs  mod.rs  obfuscated.rs  sha.rs
src/errors/: mod.rs
src/session/: session.rs
