# maturin build --release --target aarch64-unknown-linux-gnu
[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "grammers._rs"
manifest-path = "grammers-python/Cargo.toml"
python-source = "python/src/"


[project]
name = "grammers"
version = "0.4.0"
authors = [
  { name = "HBcao233", email = "hbcaoqaq@outlook.com" }
]
readme = "README.md"
license = "MIT"
keywords = ["telegram", "rust", "grammers"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.12",
]
dependencies = []
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/HBcao233/grammers_python"


[tool.pytest.ini_options]
# 只在这些目录中寻找测试
testpaths = ["python/tests"]

# 排除目录
norecursedirs = [
  ".git",
  "target",
  ".venv",
]


[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
ignore = [
    # Module level import not at top of file
    "E402", 
    # `from xxx import *` used; unable to detect undefined names
    "F403",
    # `xxx` may be undefined, or defined from star imports
    "F405"
]