[project]
name = "grammers"
version = "0.4.6"
authors = [
  { name = "HBcao233", email = "hbcaoqaq@outlook.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["telegram", "rust", "grammers"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
optional-dependencies = {}

[project.urls]
Documentation = "https://grammers-python.readthedocs.io/"
Homepage = "https://github.com/HBcao233/grammers-python"
Repository = "https://github.com/HBcao233/grammers-python"
Issues = "https://github.com/HBcao233/grammers-python/issues"


[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "grammers._rs"
manifest-path = "grammers-python/Cargo.toml"
python-source = "python/src/"

[tool.pytest.ini_options]
# Only look for tests in these directories.
testpaths = ["python/tests"]

# Exclude path
norecursedirs = [
  ".git",
  "target",
  ".venv",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
ignore = [
    # Module level import not at top of file
    "E402", 
    # `from xxx import *` used; unable to detect undefined names
    "F403",
    # `xxx` may be undefined, or defined from star imports
    "F405"
]
