[package]
name = "grammers-mtsender-pyo3"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
grammers-crypto = { workspace = true }
grammers-mtproto = { workspace = true }
grammers-tl-types = { workspace = true }
grammers-mtsender = { workspace = true }
grammers-session = { workspace = true }

grammers-tl-types-pyo3 = { workspace = true }
grammers-session-pyo3 = { workspace = true }

pyo3 = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-socks = { version = "0.5.2" }
hickory-resolver = { version = "0.25.2" }
url = { version = "2.5.7" }
