[package]
name = "grammers-mtsender-pyo3"
version = "0.4.0"
description = """
A sender implementation fir pyo3 using the Mobile Transport Protocol.
"""
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
grammers-crypto = { workspace = true }
grammers-mtproto = { workspace = true }
grammers-tl-types = { workspace = true }
grammers-session = { workspace = true }

grammers-tl-types-pyo3 = { workspace = true }
grammers-session-pyo3 = { workspace = true }

pyo3 = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-socks = { workspace = true }
hickory-resolver = { workspace = true }
url = { workspace = true }
