[package]
name = "grammers-python"
version = { workspace = true }
edition = { workspace = true }
description = "Python bindings for grammers"

[lib]
name = "_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
grammers-session-pyo3 = { workspace = true }
grammers-mtsender-pyo3 = { workspace = true }
grammers-tl-types-pyo3 = { workspace = true }

grammers-tl-types = { workspace = true }
grammers-crypto = { workspace = true }
grammers-mtproto = { workspace = true }
grammers-session = { workspace = true }
grammers-mtsender = { workspace = true }
grammers-client = { workspace = true }

chrono = "0.4.42"
log = { workspace = true }
sha1 = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = {workspace = true }
pyo3-async-runtimes = { workspace = true }
tokio = { workspace = true }
os_info = { workspace = true }
locate-locale = { workspace = true }

[features]
default = []
