[package]
name = "grammers-python"
version = "0.4.6"
description = "Python bindings for grammers"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
license-file = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
grammers-session-pyo3 = { workspace = true }
grammers-mtsender-pyo3 = { workspace = true }
grammers-tl-types-pyo3 = { workspace = true }

grammers-tl-types = { workspace = true }
grammers-crypto = { workspace = true }
grammers-mtproto = { workspace = true }
grammers-session = { workspace = true }
grammers-mtsender = { workspace = true }

# chrono = "0.4.42"
log = { workspace = true }
sha1 = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[features]
default = []
