[package]
name = "grammers-session-pyo3"
version = "0.4.1"
edition = { workspace = true }

[dependencies]
grammers-tl-types-pyo3 = { workspace = true }
grammers-session = { workspace = true }
grammers-tl-types = { workspace = true }

pyo3 = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }