[package]
name = "grammers-session-pyo3"
version = "0.4.3"
description = """
Session storages interface of Telegram data for pyo3 Python bindings.
"""
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
grammers-tl-types-pyo3 = { workspace = true }
grammers-session = { workspace = true }
grammers-tl-types = { workspace = true }

pyo3 = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
