[package]
name = "grammers-tl-types-pyo3"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
grammers-tl-types = { workspace = true }

[build-dependencies]
grammers-tl-parser = { git = "https://github.com/Lonami/grammers.git" }
grammers-tl-gen-pyo3 = { path = "../grammers-tl-gen-pyo3" }
