[package]
name = "grammers-tl-types-pyo3"
version = "0.4.6"
description = """
Rust definitions in pyo3 for Telegram's API types and functions.
"""
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
grammers-tl-types = { workspace = true }

[build-dependencies]
grammers-tl-parser = { workspace = true }
grammers-tl-gen-pyo3 = { workspace = true }
